@@ -6,6 +6,7 @@ ___________________________
 Engine changes
 --------------
 
+* Treasure dialogs are now optional (#1076).
 * Fix joypad deadzone issue (#672) by strycore.
 * Fix compilation error with Clang 3.9 in SNES_SPC.
 * Fix crash when a sprite PNG file is missing.
